# spur

./: .env.example  .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  Dockerfile.test  Makefile  README.ja.md  README.md  about-favicon.txt  codebook.toml  cspell.json  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  flake.nix  index.html  justfile  rustfmt.toml  schema.sql
.config/: tombi.toml
assets/: index-168lL5aD.css  index-1C0IbZdv.js  (+2 more)
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  justfile  rustfmt.toml
backend/.sqlx/: query-1abdf40eb0c39efe5b9beb057d97df3761e0565534613d3b8b55ae438d4b61e9.json  query-1c274bba5f79503503d4c07aaf17fab6388ff6c9dafb1bd8002e2fb158cad2fa.json  query-20c6a2b5abf670332946bca81900a535743254bad84ded791157034991104c54.json  query-36fed782abe2c7bc2c138603379e53dc62d8f3dbc17abebd7607ff79032fa33a.json  query-5436060ea40637256b57a04679d0fb2f9823c494d49aa3429dc97e89b34e0481.json  query-74fc761d631be396a3f06367f48e880aeec8a8a2f20d41cbaa561b7bf1b314d7.json  query-7fa7dc9474cdc063abf33285c7834f8d8c919cc39f6dd13b8cd4338970b36ab6.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8a362b8d862884948f7ed923af800d0bc1b1cdfd142bcddc63ddd044e979b8c8.json  query-8e69f70f27ef066f374c018d6e1039ffd406e20b0f12cb1c2251a8882fa84536.json  query-8f729f081c9e8dd01e05508d4342d713f408eef4504653ac766432b960a46c55.json  query-90232270a7f1b5cb348b2c0181939ddddf2d27c9a1db15d4b3950b27488bbd62.json  query-d4d2c9a95985bd02411754176b323f83f2c4dfd9c051c88124bb5a4a480257d6.json  query-d8aba18e4827ee77cec02b471d69d6877fe2148acbefaed9156a22677f247326.json  query-d9dcbd3dcbb0d6f94eb4a9077e49714e8bff8a17491e4c7960e1fdf77004dec5.json  query-e9d35c6d71ccd88262c59dba0b226e142358501861878b33bf9532982e9de7ce.json  query-f025bc51c72d423ddc4b22b7f4f6e2278455b83d42138b1694f5089759804bcb.json  query-f121125ac1e2a86ec3cffd27944331fe903f49d896f385c362c30cd4eb5479f0.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
backend/caddy_conf/: Caddyfile
backend/deploy/: bootstrap.sh  steps.md
backend/migrations/: 20250525220934_create_prompts_table.sql  20250808214532_create_post_table.sql  20250812145549_create_post_table.sql  20250816200133_create_non_empty_text_domain.sql  20250817140904_create_users_table.sql  20250817140939_create_friendships_table.sql  20250817141008_create_post_table.sql  20250928210912_create_non_empty_text_domain.sql  20250928211253_create_friendship_table.sql  atlas.sum
backend/src/: api.rs  app_services.rs  config.rs  domain.rs  dto.rs  handler.rs  infra.rs  lib.rs  logger.rs  main.rs  map_into.rs  middleware.rs  read.rs  read_models.rs  repository.rs  router.rs  service.rs  state.rs  technical_error.rs  test_utils.rs
backend/src/api/: dto.rs  error.rs  middleware.rs  router.rs  validated_json.rs
backend/src/api/dto/: requests.rs  responses.rs  signup_request.rs
backend/src/api/handler/: auth.rs  friendship.rs  post.rs
backend/src/app_services/: authenticator_svc.rs  mutate_friendship_by_username_svc.rs  uow.rs
backend/src/domain/: auth.rs  error.rs  friendship.rs  post.rs  user.rs
backend/src/domain/auth/: claims.rs  service.rs
backend/src/domain/content/: error.rs  repository.rs  service.rs
backend/src/domain/friendship/: error.rs  repository.rs  service.rs  user_id_pair.rs
backend/src/domain/post/: error.rs  service.rs
backend/src/domain/user/: error.rs  service.rs
backend/src/dto/: requests.rs  responses.rs  signup_request.rs
backend/src/handler/: api_error.rs  auth.rs  content.rs  friendship.rs  post.rs  prompt.rs  validated_json.rs
backend/src/infra/: auth_provider.rs  friendship_repo.rs  post_repo.rs  post_with_author_read.rs  social_read.rs  user_repo.rs
backend/src/models/: post.rs  prompt.rs  user.rs
backend/src/repository/: error.rs  friendship.rs  post.rs  prompt.rs  user.rs
backend/src/service/: auth.rs  content.rs  friendship.rs  post.rs  prompt.rs  user.rs
backend/src/test_utils/: dummy_data.rs  fake_db.rs  http_bodies.rs  json.rs  mock_repos.rs  seed_data.rs  temp_db.rs  time.rs
docs/: CNAME  (+2 more)
spur-api/: Cargo.toml  Makefile  docker-compose.yml
spur-api/migrations/: 20250510170259_create_users_table.sql  20250513002857_create_users_table.sql  20250516145245_create_friendships_table.sql  20250516180841_create_friendships_table.sql  20250524190214_create_prompts_table.sql  20250525220832_create_users_table.sql  20250525220910_create_friendships_table.sql  20250530194931_create_posts_table.sql
spur-api/src/: config.rs  domain.rs  error.rs  handler.rs  handlers.rs  main.rs  middleware.rs  models.rs  repositories.rs  repository.rs  router.rs  service.rs  services.rs  state.rs  technical_error.rs  test_util.rs  test_utils.rs  utils.rs
spur-api/src/domain/: auth.rs  error.rs  friendship.rs  prompt.rs  user.rs
spur-api/src/domain/content/: error.rs  repository.rs  service.rs
spur-api/src/domain/friendship/: error.rs  repository.rs  service.rs  user_id_pair.rs
spur-api/src/handler/: api_error.rs  auth.rs  content.rs  friendship.rs  post.rs  prompt.rs  validated_json.rs
spur-api/src/handlers/: api_error.rs  auth_handlers.rs  friendship_handlers.rs
spur-api/src/models/: post.rs  prompt.rs  user.rs
spur-api/src/repositories/: friendship_repo.rs  insertion_error.rs  prompt_repo.rs  user_repo.rs
spur-api/src/repository/: friendship.rs  post.rs  prompt.rs  user.rs
spur-api/src/service/: auth.rs  content.rs  friendship.rs  jwt.rs  post.rs  prompt.rs  user.rs
spur-api/src/services/: auth_svc.rs  domain_error.rs  friendship_svc.rs  jwt_svc.rs  prompt_svc.rs
spur-api/src/test_util/: seed_data.rs
spur-api/src/test_utils/: dummy_data.rs  seed_data.rs  temp_db.rs
spur-cli/: Cargo.toml
spur-cli/src/: auth.rs  color_output.rs  commands.rs  content.rs  error_response.rs  format.rs  friends.rs  handler.rs  input_validators.rs  interactive.rs  main.rs  prompt.rs  prompt_post.rs  request.rs  token_store.rs
spur-cli/src/handler/: auth.rs  content.rs  friends.rs
(+148 files in other folders)
