[package]
name        = "spur"
version     = "0.2.0"
edition     = "2024"
default-run = "spur"

[dependencies]
anyhow            = "1.0.98"
async-trait       = "0.1.88"
axum              = { version = "0.8.4", features = ["macros"] }
axum-extra        = { version = "0.12.0", features = ["typed-header"] }
bcrypt            = "0.19.0"
chrono            = "0.4.41"
dotenvy           = "0.15.7"
env_logger        = "0.11.8"
jsonwebtoken      = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
lazy-regex        = "3.4.1"
log               = "0.4.28"
serde             = { version = "1.0.219", features = ["derive"] }
sqlx              = { version = "0.9.0", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror         = "2.0.12"
tokio             = { version = "1.45.0", features = ["rt-multi-thread", "signal"] }
tower-http        = { version = "0.6.8", features = ["cors"] }
utoipa            = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator         = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
mockall    = "0.14.0"
serde_json = "1.0.143"
tower      = { version = "0.5.2", features = ["util"] }

[lints.clippy]
# All lint groups except restriction and cargo
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Explicit panics
expect_used   = "forbid"
panic         = "forbid"
todo          = "forbid"
unimplemented = "forbid"
unreachable   = "deny"   # SQLx macros insert `#[allow(clippy::unreachable)]`
unwrap_used   = "forbid"

# Implicit panics (and wrapping)
arithmetic_side_effects = "forbid"
indexing_slicing        = "deny"   # mockall::automock inserts `#[allow(clippy::indexing_slicing)]`
string_slice            = "forbid"

# Ignoring `#[must_use]`
let_underscore_must_use = "forbid"
unused_result_ok        = "forbid"

# Unsafe discipline (only relevant when `unsafe_code` is not set to "forbid")
multiple_unsafe_ops_per_block = "forbid"
undocumented_unsafe_blocks    = "forbid"

# Lint suppression
allow_attributes                = "forbid"
allow_attributes_without_reason = "forbid"

# Binding shadowing
shadow_reuse     = "forbid"
shadow_same      = "deny"   # async_trait inserts `#[allow(clippy::shadow_same)]`
shadow_unrelated = "forbid"

# Superfluous naming
redundant_test_prefix    = "deny"
unnecessary_self_imports = "warn"
unused_trait_names       = "warn"

[lints.rust]
unsafe_code = "forbid"

closure_returning_async_block = "warn"
redundant_imports             = "warn"
unused_qualifications         = "warn"
