[package]
name = "spur"
version = "0.1.3"
edition = "2024"
default-run = "spur"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "forbid"
expect_used = "forbid"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.12.0", features = ["typed-header"] }
bcrypt = "0.17.0"
chrono = "0.4.41"
colored = "3.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = { version = "10.1.0", default-features = false, features = ["rust_crypto"] }
lazy-regex = "3.4.1"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.13.1"
serde_json = "1.0.143"
tower = { version = "0.5.2", features = ["util"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4"] }
