[package]
name = "spur-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum = "0.8.4"
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenvy.workspace = true
spur-shared = { path = "../spur-shared" }
sqlx = { version = "0.8.5", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.45.0", features = ["full"] }
