[package]
name = "spur-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenvy.workspace = true
jsonwebtoken = "9.3.1"
serde.workspace = true
spur-shared = { path = "../spur-shared" }
sqlx = { version = "0.8.5", features = ["chrono", "postgres", "runtime-tokio"] }
tokio.workspace = true
