[package]
name = "spur-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bcrypt = "0.17.0"
chrono = "0.4.41"
colored.workspace = true
dotenvy.workspace = true
futures = "0.3.31"
jsonwebtoken = "9.3.1"
serde.workspace = true
spur-shared = { path = "../spur-shared" }
sqlx = { version = "0.8.5", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "2.0.12"
tokio.workspace = true
validator.workspace = true

[dev-dependencies]
mockall = "0.13.1"
url.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }
