[package]
name = "spur-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spur"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.37", features = ["derive"] }
dotenvy.workspace = true
email_address.workspace = true
inquire = "0.7.5"
reqwest = { version = "0.12.15", features = ["json"] }
spur-shared = { path = "../spur-shared" }
tokio.workspace = true
url = "2.5.4"
